<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/black"

    android:layout_margin="1dp"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/baseline_library_music_24">
    </ImageView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="350dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/NameApp_Main"
        android:textColor="#D5CFDF"
        android:textSize="34sp" />

    <Button
        android:id="@+id/btn_Playlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="450dp"
        android:shadowColor="@color/design_default_color_surface"
        android:layout_marginRight="20dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/btnPlay_Main"
        app:iconTintMode="screen" />


    <Button
        android:id="@+id/btn_ListSongs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="520dp"
        android:layout_marginRight="20dp"
        android:fontFamily="sans-serif-black"
        android:shadowColor="@color/design_default_color_surface"
        android:text="@string/btnSong_Main"
        app:iconTintMode="screen" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="155dp"
        android:text="@string/title_Main"
        android:textColor="#E8E8E8"
        android:textStyle="bold" />


</RelativeLayout>